--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -8,66 +8,27 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #f6f8fc;
+}
+
 .content {
+    width: 100vw;
+    height: 100vh;
     padding: 1rem;
+    background-color: #fff;
 }
 
-.pokemons {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+@media screen and (min-width: 992px) {
+    .content {
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+
+    }
 }
 
-.pokemon {
-    display: flex;
-    flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    background-color: #14A06F;
-    color: white;
-    border-radius: 1rem;
-}
-
-.pokemon .Number{
-    color: black;
-    opacity: .4;
-    text-align: right;
-    font-size: .625rem;
-}
-
-.pokemon .Name{
-    color: white;
-    margin-bottom: 0;
-}
-
-.pokemon .detail{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.pokemon .detail .Types{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-.pokemon .detail .Types .Type{
-    background-color: rgba(127, 255, 212, 0.414) ;
-    color: white;
-    padding: .5rem 1rem;
-    border-radius: 1rem;
-    font-size: .600rem;
-    margin: .25rem 0;
-}
-
-.pokemons .detail img {
-    max-width: 100%;
-    height: 60px;
-}
 
 /*
 <li>
